--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "css-shorthand",
   "version": "1.0.0",
   "description": "a simple javascript utility to expand css shorthand values",
-  "main": "transforms.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
